--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,38 +8,74 @@
     <title>Inicio</title>
 
     <!-- iconos de google -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+
+    <!-- fuentes -->
+    <link rel="stylesheet" href="./fonts/CartoonCheck-Black 2.ttf">
 
 
 
     <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/variables.css">
+
+
 
 
 </head>
 
 
-<body class="body">
+<body class="Body">
 
     <header class="Header">
+        <div class="Logo"><a href="#"><img src="#" alt="Logo" class="Logo-img"></a>
 
-        <div class="Logo"><img src="#" alt="logo"></div>
-        <ul class="Header-ul">
-            <li>Sobre mí</li>
-            <li>Proyectos</li>
-            <li>Contacto</li>
-            <li>Linkedin</li>
-            <li>Behance</li>
-        </ul>
+        </div>
 
-    
+        <nav class="Header-nav">
+            <ul class="Header-ul">
+                <li><a href="#">Sobre mi</a></li>
+                <li><a href="#">Proyectos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+
+        <div class="Header-icons">
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <li> <a href="#"> <i class="fa-brands fa-behance"></i></a> </li>
+            </ul>
+        </div>
+
     </header>
 
 
 
 
     <main class="Main">
+
+        <div class="Main-themes">
+            <button class="Main-colorButton" id="light-mode"></button>
+            <button class="Main-colorButton" id="dark-mode"></button>
+            <button class="Main-colorButton" id="purple-mode"></button>
+            <button class="Main-colorButton" id="green-mode"></button>
+        </div>
+
+
+        <div class="Main-intro">
+            <h1 class="Main-h1">P</h1>
+            <img src="./img/O.svg" alt="o" class="Main-img">
+            <h1 class="Main-h1">RTF</h1>
+            <img src="./img/O.svg" alt="o" class="Main-img">
+            <h1 class="Main-h1">LI</h1>
+            <img src="./img/O.svg" alt="o" class="Main-img">
+
+        </div>
+
 
     </main>
 
@@ -54,6 +91,7 @@
 
 
 
-    
+
 </body>
+
 </html>
