--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 
+
+    
     <!-- fuentes -->
     <link rel="stylesheet" href="./fonts/CartoonCheck-Black 2.ttf">
 
 
 
-    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/layout-inicio.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/variables.css">
 
@@ -29,7 +31,7 @@
 </head>
 
 
-<body class="Body">
+<body class="Body u-bgPrimary u-txtPrimary">
 
     <header class="Header">
         <div class="Logo"><a href="#"><img src="#" alt="Logo" class="Logo-img"></a>
@@ -46,13 +48,12 @@
 
         <div class="Header-icons">
             <ul>
-                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <li> <a href="#"> <i class="fa-brands fa-behance"></i></a> </li>
+                <li id="linkedin"><a href="https://www.linkedin.com/in/candela-fos-segarra-4b78b92b7/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <li id="behance"> <a href="https://www.behance.net/candelasegarra" target="_blank"> <i class="fa-brands fa-behance"></i></a> </li>
             </ul>
         </div>
 
     </header>
-
 
 
 
@@ -68,29 +69,33 @@
 
         <div class="Main-intro">
             <h1 class="Main-h1">P</h1>
-            <img src="./img/O.svg" alt="o" class="Main-img">
+            <img src="./img/cib_circle.png" alt="o" class="Main-img">
             <h1 class="Main-h1">RTF</h1>
-            <img src="./img/O.svg" alt="o" class="Main-img">
+            <img src="./img/cib_circle.png" alt="o" class="Main-img">
             <h1 class="Main-h1">LI</h1>
-            <img src="./img/O.svg" alt="o" class="Main-img">
+            <img src="./img/cib_circle.png" alt="o" class="Main-img">
 
         </div>
 
+
+        <footer class="Footer">
+            
+
+        </footer>
 
     </main>
 
 
 
-
-
     <footer class="Footer">
-
+        <div class="Footer-nav">Sobre mi</div>
+        <div class="Footer-nav">Proyectos</div>
+        <div class="Footer-nav">Contactos</div>
     </footer>
 
 
 
-
-
+   
 
 </body>
 
