--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 
-    <link rel="stylesheet" href="./css/layout-inicio.css">
+    <link rel="stylesheet" href="css/inicio/layout-inicio.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/variables.css">
 
@@ -31,7 +31,7 @@
 </head>
 
 
-<body class="Body u-bgPrimary u-txtPrimary">
+<body class="Body u-lightMode">
 
     <header class="Header">
         <div class="Logo"><a href="#"><img src="#" alt="Logo" class="Logo-img"></a>
@@ -40,8 +40,8 @@
 
         <nav class="Header-nav">
             <ul class="Header-ul">
-                <li><a href="#">Sobre mi</a></li>
-                <li><a href="#">Proyectos</a></li>
+                <li><a href="./sobre-mi.html">Sobre mi</a></li>
+                <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
@@ -61,8 +61,8 @@
 
         <div class="Main-themes">
             <button class="Main-colorButton" id="light-mode"></button>
-            <button class="Main-colorButton" id="dark-mode"></button>
             <button class="Main-colorButton" id="purple-mode"></button>
+            <button class="Main-colorButton" id="pink-mode"></button>
             <button class="Main-colorButton" id="green-mode"></button>
         </div>
 
