--- a/proyectos.html
+++ b/proyectos.html
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
 
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/variables.css">
+   <!-- iconos de google -->
+   <link rel="stylesheet"
+   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+<!-- font awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+
+
+
+<!-- fuentes -->
+<link rel="stylesheet" href="./fonts/CartoonCheck-Black 2.ttf">
+
+
+<link rel="stylesheet" href="./css/styles.css">
+<link rel="stylesheet" href="./css/proyectos/layout-proyectos.css">
+<link rel="stylesheet" href="./css/variables.css">
 
 </head>
-<body>
+<body class="Body">
 
     <header class="Header">
         <div class="Logo"><a href="#"><img src="#" alt="Logo" class="Logo-img"></a>
@@ -18,8 +32,8 @@
 
         <nav class="Header-nav">
             <ul class="Header-ul">
-                <li><a href="#">Sobre mi</a></li>
-                <li><a href="#">Proyectos</a></li>
+                <li><a href="./sobre-mi.html">Sobre mi</a></li>
+                <li><a href="./proyectos.html">Proyectos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
@@ -32,6 +46,21 @@
         </div>
 
     </header>
+
+
+    <main class="Main">
+
+        <h1 class="Main-h1">Mis proyectos</h1>
+
+        <div class="Proyectos">
+            <img src="./img/mattura/mattura-portada-text.jpg" alt="mattura" class="Proyectos-img mattura">
+            <img src="./img/rutea/rutea-portada.pn1g" alt="rutea" class="Proyectos-img rutea">
+            <img src="./img/unavioska/unavioska-po1rtada.png" alt="unavioska" class="Proyectos-img unavioska">
+            <img src="./img/cocozone/cocozone-port1ada.png" alt="cocos" class="Proyectos-img cocozone">
+            <img src="./img/giftopia/giftopia-port1ada.png" alt="giftopia" class="Proyectos-img giftopia">
+        </div>
+
+    </main>
     
 </body>
 </html>
